--- a/miraire/character.html
+++ b/miraire/character.html
@@ -40,28 +40,28 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="slide_item">
-                            <!-- ここにコンテンツを追加 -->
+                        <div class="slide_item slide_item1">
+                            <p>公約1</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="slide_item">
-                            <!-- ここにコンテンツを追加 -->
+                        <div class="slide_item slide_item2">
+                            <p>公約2</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="slide_item">
-                            <!-- ここにコンテンツを追加 -->
+                        <div class="slide_item slide_item3">
+                            <p>公約3</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="slide_item">
-                            <!-- ここにコンテンツを追加 -->
+                        <div class="slide_item slide_item4">
+                            <p>公約4</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="slide_item">
-                            <!-- ここにコンテンツを追加 -->
+                        <div class="slide_item slide_item5">
+                            <p>公約5</p>
                         </div>
                     </div>
                 </div><!-- /swiper-wrapper -->  
