--- a/miraire/character.html
+++ b/miraire/character.html
@@ -30,7 +30,7 @@
                     <li><a href="./character.html">Chara<span>公約・キャラクター</span></a></li>
                 </ul>
             </nav>
-            <img class="vote" src="./images/header_box.png" alt="投票箱">
+            <a href="./vote.php"><img class="vote" src="./images/header_box.png" alt="投票箱"></a>
         </header>
         <main>
             <!-- Swiper -->
