--- a/miraire/character.html
+++ b/miraire/character.html
@@ -83,7 +83,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- JS -->
-    <script src="./js/swiper.js"></script>
+    <script src="./js/swiper_character.js"></script>
 
 </body>
 </html>
