リンク追加

--- a/miraire/character.html
+++ b/miraire/character.html
@@ -21,7 +21,7 @@
     <div id="container">
         <header>
             <h1>
-                <img class="logo" src="./images/header_logo.svg" alt="ミライレのロゴ">
+                <a href="./index.php"><img class="logo" src="./images/header_logo.svg" alt="ミライレのロゴ"></a>
             </h1>
             <nav>
                 <ul>
