--- a/miraire/character.html
+++ b/miraire/character.html
@@ -25,12 +25,14 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="./index.php#about">About<span>本展示について</span></a></li>
+                    <li><a href="index.php#about">About<span>本展示について</span></a></li>
                     <li><a href="">News<span>最新情報</span></a></li>
                     <li><a href="./character.html">Chara<span>公約・キャラクター</span></a></li>
                 </ul>
             </nav>
-            <a href="./vote.php"><img class="vote" src="./images/header_box.png" alt="投票箱"></a>
+            <p class="vote">
+                <a href="./vote.php"><img class="vote-img" src="./images/menu_box.png" alt="投票箱"></a>
+            </p>
         </header>
         <main>
             <!-- Swiper -->
@@ -65,13 +67,17 @@
             </div><!-- /swiper -->
         </main>
         <footer>
-            <img class="logo" src="./images/hooter_logo.png" alt="">
+            <div class="footer-logo">
+                <img class="logo" src="./images/hooter_logo.png" alt="">
+            </div>
             <ul>
-                <li><a href="">本展示について</a></li>
-                <li><a href="">公約・キャラクター</a></li>
+                <li><a href="index.php#about">本展示について</a></li>
+                <li><a href="character.html">公約・キャラクター</a></li>
                 <li><a href="">最新情報</a></li>
             </ul>
-            <img class="sns" src="./images/hooter_SNS.png" alt="">
+            <div class="sns-link">
+                <img class="sns" src="./images/hooter_SNS.png" alt="">
+            </div>
         </footer>
     </div>
 
