--- a/miraire/character.html
+++ b/miraire/character.html
@@ -73,11 +73,13 @@
                 <div class="footer-logo">
                     <img class="logo" src="./images/hooter_logo.png" alt="">
                 </div>
-                <ul>
-                    <li><a class="underline" href="index.php#about">本展示について</a></li>
-                    <li><a class="underline" href="character.html">公約・キャラクター</a></li>
-                    <li><a class="underline" href="">最新情報</a></li>
-                </ul>
+                <div class="footer-nav">
+                    <ul>
+                        <li><a class="underline" href="index.php#about">本展示について</a></li>
+                        <li><a class="underline" href="character.html">公約・キャラクター</a></li>
+                        <li><a class="underline" href="">最新情報</a></li>
+                    </ul>
+                </div>
                 <div class="sns-link">
                     <img class="sns" src="./images/hooter_SNS.png" alt="">
                 </div>
